class MealRating {
  constructor(meal, rating, dateOfRating){
    this.meal = meal;
    this.rating = rating;
    this.dateOfRating = dateOfRating;
  }
}

module.exports = { MealRating };
